[package]
name = "resistive-touch-screen"
version = "0.1.0"
edition = "2021"

[dependencies]
# embedded-hal = { version = "0.2.7", features = ["unproven"] }
# atsamd-hal = { version = "0.15.1", features = ["library"] }
pyportal = "0.10.0"

[patch.crates-io]
pyportal = { path = "../3rdParty/atsamd/boards/pyportal" }
