[package]
name = "resistive-touch-screen"
version = "0.1.0"
edition = "2021"

[dependencies]
# embedded-hal = "0.2.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
# atsamd-hal = { version = "0.15.1", features = ["library"] }
atsamd-hal = { path = "/Users/wembly/Projects/3rdParty/atsamd/hal", features = [
    "samd51j",
] }
# pyportal = { path = "/Users/wembly/Projects/3rdParty/pyportal/boards/pyportal" }
